Adjusted text spacing for mobile, changed photo sizing math, still need to fix footer on home page.

--- a/output.css
+++ b/output.css
@@ -532,6 +532,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.75rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pl-7 {
   padding-left: 1.75rem;
 }
@@ -579,6 +584,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 6rem;
   }
 
+  .md\:h-4\/5 {
+    height: 80%;
+  }
+
   .md\:w-3\/5 {
     width: 60%;
   }
@@ -589,11 +598,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:justify-between {
     justify-content: space-between;
-  }
-
-  .md\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
   }
 
   .md\:px-10 {
